Fixed alignment of table on admin panel (also changed apperance of "Impersonate" button).

--- a/Code/webapp/css/style.css
+++ b/Code/webapp/css/style.css
@@ -817,6 +817,7 @@ a {
 {
     border-bottom: 1px solid lightgray;
     white-space: nowrap;
+    vertical-align: middle; 
 }
 .table #header>#headerInputs>th>input[type= "text"]
 {
